--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <button>Try for free--></button>
 </header>
        <section id="principal">
-        <h1> Your <a href="#"><img src="#" id="logo"></a> <a href="#"><img src="#" id="logo"></a> personalized AI for mindfulness<h1>
+        <h1> Your <a href="#"><img src="#"></a> <a href="#"><img src="#"></a> personalized AI for mindfulness<h1>
         <h3>Neuroscience-Backed Mindfulness</h3>
         <h5>Embark on a journey towards inner peace, balance and self-discovery.</h5>
           <a href="#"><button>Get app</button>
        </section> 
           <section id="mindmentor"
        <div>
-          <a href="#"><img src="#" id="logo"></a>
+          <a href="#"><img src="#"></a>
           <h4> Developed together with science-based mental health experts. </h4>
        </div>
         <div>
