--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,73 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebSite</title>
+  </head>
+  <body>
+<header>
+ <a href="#"><img src="#" id="logo"></a>
+  <nav>
+    <ul>
+     <div>
+       <li><a href ="#">About us</a></li>
+       <li><a href ="#">Careers</a></li>
+       <li><a href ="#">Contact</a></li>
+     </div>
+    </ul>
+  </nav> 
+</header>
+<section id="inicio">
+ <h1>Stories for everyone</h1>
+  <p>Cultivate your imagination</p>
+   <button>Join Waitlist</button>
+</section>
+<main>
+  <h2>Reading together anywhere</h2>
+   <div>
+      <img src="#">
+      <h4>The Modern Book Club</h4>
+      <p>Join the get smart movement. Read with influencers or friends in reading clubs for digital natives. Our provocative discussion guides will make your interactions fun.</p>
+   </div>
+    <div>
+      <img src="#">
+      <h4>Your time is precious</h4>
+      <p>Fable felios are curated by experts to suit your time, mood and interests. We do all the work to save you time with book summaries.</p>
+  </div>
+     <div>
+      <img src="#">
+      <h4>Digital Nutrition</h4>
+      <p>It is time to put mobile screens in service of mental wellness. Stories promote cognitive abilities that can lead to better mental health.</p>
+    </div>
+</main> 
+<section id="cadastro">
+  <form>
+    <h2>Be the first to know</h2>
+    <p>We are thrilled to add you to our list</p>
+      <input type="text" placeholder="Email">
+  </form>
+</section>
+<footer>
+  <br>
+  <a href="#"><img src="#" id="logo"></a>
+  </br>
+  <nav>
+   <ul>
+     <li><a href ="#">Privacy</a></li>
+     <li><a href ="#">Terms of Service</a></li>
+     <li><a href ="#">Careers</a></li>
+     <li><a href ="#">Contact</a></li>
+   </ul>
+  </nav>
+    <div>
+    <p>2020 Fabie Group Inc.
+    </div>   
+    <div>
+     <a href="#"><img src="#" id="Twitter"></a>
+     <a href="#"><img src="#" id="Instagram"></a>
+     <a href="#"><img src="#" id="linkedin"></a>
+    </div>
+</footer>
+  </body>
+</html>
